# sudoku

./: .gitignore  README.md
data/: input.txt
source/: CMakeLists.txt
source/core/: config.h  main.cpp  sudoku_board.cpp  sudoku_board.h  sudoku_gm.cpp  sudoku_gm.h
source/lib/: contains.h  messages.cpp  messages.h  text_color.h
source/utils/: is_numeric.cpp  is_numeric.h  split.cpp  split.h
